force-app/main/default/objects/SFDC_CSP_Version__c/SFDC_CSP_Version__c.object-meta.xml
<CustomObject>
    <description>SFDC Customer Service Project</description>
    <label>Version</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Version Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>