force-app/main/default/objects/SFDC_CSP_Version__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the version is inactive for reporting and filtering.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>