force-app/main/default/objects/SFDC_CSP_Version__c/fields/Product_Line_Global__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Global__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Line</valueSetName>
    </valueSet>
</CustomField>