force-app/main/default/objects/SFDC_CSP_Version__c/fields/Product_Release__c.field-meta.xml
<CustomField>
    <fullName>Product_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Release</label>
    <referenceTo>NI_Product_Release__c</referenceTo>
    <relationshipLabel>Versions</relationshipLabel>
    <relationshipName>Versions</relationshipName>
    <type>Lookup</type>
</CustomField>