force-app/main/default/objects/SFDC_CSP_Version__c/fields/TFS_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>TFS_Project_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TFS Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>